--- a/Css/boardgame.scss
+++ b/Css/boardgame.scss
@@ -3,8 +3,55 @@ $pieceHeight:120px;
 
 body{
     margin: 0;
+    background-image: url("/images/bakgroundImage.jpg");
+    background-size: 1650px !important;
+    background-repeat: no-repeat;
+    padding-bottom: 60px !important;
+}
+p{
+    color: white;
+    font-family: 'Playfair Display SC', serif;
 }
 
+
+#gotLogo{
+    width:250px !important;
+    height:210px !important;
+    z-index: 100;
+    }
+.container{
+    top: 50px;
+    padding-top:20px !important;
+    text-align: center;
+    border-radius: 9px;
+    &--subTitle{
+        font-size: 20px;
+        z-index: 110 !important;
+        transform: translate(120%, -120px) rotate(15deg) !important;
+        position: absolute;
+        color: rgb(161, 33, 33);
+        font-family: 'Gloria Hallelujah', cursive;
+        background-color:rgba(255, 255, 255, 0.7);
+        padding: 10px;
+    }
+    &--mainTitle{
+        z-index: 1;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -300px);
+        text-decoration: underline;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        margin: 0;
+        font-family: "Game of martin";
+        font-size: 2.2rem;
+        color: #f4b342;
+    }
+}
+
+    
+    
 #leftSideThirdOne{
     margin: 0;
 
@@ -56,7 +103,6 @@ body{
     border-left: 2px solid black;
     border-right: 1px solid black;
 }
-
 #rightSideSecond{
     border-right: 2px solid black;
     border-left: 1px solid black;
@@ -68,17 +114,14 @@ body{
 #leftSideThirdTwo{
     border-right: 1px solid black;
 }
-
 #RightSideThird{
     border-right: 2px solid black;
-
 }
                                     //4th Row
 #leftSideForthOne{
     border-left: 2px solid black;
     border-right: 1px solid black;
 }
-
 #rightSideForth{
     border-right: 2px solid black;
     border-left: 1px solid black;
@@ -141,10 +184,6 @@ body{
     border-right: 3px solid gold;
     border-bottom-right-radius: 9px;
 }
-
-
-
-
 //-------------------------------------Class Tags------------------------------//
 
 .iconInput{
@@ -160,15 +199,12 @@ body{
         margin-top: 15px;
         margin-bottom: -15px;
         margin-left:-30px;
-
     }
 }
 .boardGame{
     margin:0;
     height: 400px;
     &__sideBar{
-        
-
         background-image: url("/images/card_background.jpg");
         background-size: cover;
         width: $pieceWidth;
@@ -183,7 +219,6 @@ body{
         border: 1px solid black;
         border-radius: 10px;
     }
- 
     //---------------------------------------Traps---------------------------------//
     &__death{
         background-image: url(/icons/trap_death.png);
@@ -350,4 +385,24 @@ body{
     color: red;
     box-shadow: 0 8px 10px 0 rgba(0,0,0,0.5), 0 1px 10px 0 rgba(0,0,0,0.19);
     transform: scale(1.1);
+}
+
+//-----------------------------------Winner Page-----------------------------------//
+canvas{
+    border: 1px solid black;
+    background-color: white;
+    height: 560px;
+    width: 1200px;
+}
+#leftSide_Winner{
+    background-image: url("/images/card_background.jpg");
+    background-size: cover;
+    border-top-left-radius: 40%;
+    border-bottom-left-radius: 40%;
+}
+#rightSide_Winner{
+    background-image: url("/images/card_background.jpg");
+    background-size: cover;
+    border-top-right-radius: 40%;
+    border-bottom-right-radius: 40%;
 }
