--- a/Css/style.css
+++ b/Css/style.css
@@ -23,8 +23,9 @@ p {
 }
 
 #gotLogo {
-  width: 250px;
-  height: 210px;
+  width: 350px;
+  height: 310px;
+  z-index: 100;
 }
 
 .card {
@@ -45,19 +46,32 @@ p {
   border-radius: 9px;
 }
 
+.container--subTitle {
+  font-size: 20px;
+  z-index: 110 !important;
+  -webkit-transform: translate(6%, -170px) rotate(15deg) !important;
+          transform: translate(6%, -170px) rotate(15deg) !important;
+  position: absolute;
+  color: #a12121;
+  font-family: 'Gloria Hallelujah', cursive;
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 10px;
+}
+
 .container--mainTitle {
+  z-index: 1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -280px);
+          transform: translate(-50%, -280px);
   text-decoration: underline;
   padding-top: 20px;
   padding-bottom: 20px;
   margin: 0;
   font-family: "Game of martin";
-  font-size: 2.3rem;
+  font-size: 3.2rem;
   color: #f4b342;
-}
-
-.container--subTitle {
-  color: black;
-  font-family: 'Gloria Hallelujah', cursive;
 }
 
 .card-body {
@@ -130,8 +144,8 @@ p {
 
 #startButton {
   font-family: 'Playfair Display SC', serif;
-  background-color: #da6607;
-  color: white;
+  background-color: white;
+  color: black;
   width: 300px;
   padding: 15px 32px;
   border-radius: 4px;
@@ -147,6 +161,11 @@ p {
 }
 
 @media (min-width: 576px) {
+  #gotLogo {
+    width: 450px;
+    height: 410px;
+    z-index: 100;
+  }
   .selection {
     padding-top: 9px !important;
     -ms-flex-line-pack: center;
@@ -178,8 +197,30 @@ p {
     min-height: 800px;
   }
   .container--mainTitle {
-    font-size: 3rem;
+    z-index: 1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -220px);
+            transform: translate(-50%, -220px);
+    text-decoration: underline;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin: 0;
+    font-family: "Game of martin";
+    font-size: 3.6rem;
     color: #f4b342;
+  }
+  .container--subTitle {
+    font-size: 40px;
+    z-index: 110 !important;
+    -webkit-transform: translate(42%, -225px) rotate(15deg) !important;
+            transform: translate(42%, -225px) rotate(15deg) !important;
+    position: absolute;
+    color: #a12121;
+    font-family: 'Gloria Hallelujah', cursive;
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 10px;
   }
   .card {
     width: 22rem;
@@ -213,5 +254,22 @@ p {
 
 #contains {
   padding-bottom: 10px;
+}
+
+.deadBody {
+  background-color: black !important;
+  background-image: none !important;
+  max-height: 500px !important;
+}
+
+#deadText {
+  color: white !important;
+  left: 0 !important;
+  line-height: -15 !important;
+  margin-top: -100px !important;
+  position: absolute !important;
+  text-align: center !important;
+  top: 50% !important;
+  width: 100% !important;
 }
 /*# sourceMappingURL=style.css.map */
