--- a/Css/style.scss
+++ b/Css/style.scss
@@ -27,8 +27,9 @@ p{
 }
 
 #gotLogo{
-    width:250px;
-    height:210px;
+    width:350px;
+    height:310px;
+    z-index: 100;
 }
 .card{
     background-image: url("/images/card_background.jpg");
@@ -46,21 +47,32 @@ p{
     padding-top:20px !important;
     text-align: center;
     border-radius: 9px;
+    &--subTitle{
+        font-size: 20px;
+        z-index: 110 !important;
+        transform: translate(6%, -170px) rotate(15deg) !important;
+        position: absolute;
+        color: rgb(161, 33, 33);
+        font-family: 'Gloria Hallelujah', cursive;
+        background-color:rgba(255, 255, 255, 0.7);
+        padding: 10px;
+    }
     &--mainTitle{
-        
+        z-index: 1;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -280px);
         text-decoration: underline;
         padding-top: 20px;
         padding-bottom: 20px;
         margin: 0;
         font-family: "Game of martin";
-        font-size: 2.3rem;
+        font-size: 3.2rem;
         color: #f4b342;
     }
-    &--subTitle{
-        color: black;
-        font-family: 'Gloria Hallelujah', cursive;
-    }
 
+    
 }
 .card-body{
     margin: 0;
@@ -120,8 +132,8 @@ p{
 }
 #startButton{
     font-family: 'Playfair Display SC', serif;
-    background-color: rgb(218, 102, 7);
-    color: white;
+    background-color: white;
+    color: black;
     width: 300px;
     padding: 15px 32px;
     border-radius: 4px;
@@ -138,6 +150,11 @@ p{
 //----------------------------------DESKTOP-----------------------------------------//
 @media (min-width: 576px) {
 
+    #gotLogo{
+        width:450px;
+        height:410px;
+        z-index: 100;
+    }
 
 .selection{
     padding-top: 9px !important;
@@ -149,7 +166,6 @@ p{
         color: white;
         text-align: center;
         display: inline-block;
-        //font-size: 18px;
         margin: 4px 2px;
         cursor: pointer;
        transition-duration: 0.4s;
@@ -167,9 +183,32 @@ p{
         text-align: center;
         min-height:800px;
         &--mainTitle{
-            font-size: 3rem;
+            z-index: 1;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -220px);
+            text-decoration: underline;
+            padding-top: 20px;
+            padding-bottom: 20px;
+            margin: 0;
+            font-family: "Game of martin";
+            font-size: 3.6rem;
             color: #f4b342;
         }
+        &--subTitle{
+            font-size: 40px;
+            z-index: 110 !important;
+            transform: translate(42%, -225px) rotate(15deg) !important;
+            position: absolute;
+          //  margin-top: -150px;
+            color: rgb(161, 33, 33);
+         //   text-shadow: 0 4px 4px  black;
+            font-family: 'Gloria Hallelujah', cursive;
+            background-color:rgba(255, 255, 255, 0.7);
+            padding: 10px;
+        }
+        
     }
     .card{
         width: 22rem;
@@ -199,4 +238,22 @@ p{
 
 #contains{
     padding-bottom: 10px;
+}
+
+
+//-----------------------------------Dead Page-----------------------------------//
+.deadBody{
+    background-color: black !important;
+    background-image: none !important;
+    max-height: 500px !important;
+}
+#deadText{
+    color: white !important;
+    left: 0 !important;
+    line-height: -15 !important;
+    margin-top: -100px !important;
+    position: absolute !important;
+    text-align: center !important;
+    top: 50% !important;
+    width: 100% !important;
 }
