--- a/Css/boardgame.css
+++ b/Css/boardgame.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   background-image: url("../images/bakgroundImage.jpg");
-  background-size: 1650px !important;
+  background-size: cover;
   background-repeat: no-repeat;
   padding-bottom: 60px !important;
 }
@@ -39,10 +39,9 @@ p {
 .container--mainTitle {
   z-index: 1;
   position: absolute;
-  top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -300px);
-          transform: translate(-50%, -300px);
+  -webkit-transform: translate(-50%, -145px);
+          transform: translate(-50%, -145px);
   text-decoration: underline;
   padding-top: 15px;
   padding-bottom: 20px;
@@ -57,11 +56,6 @@ p {
 }
 
 #battleText {
-  color: black;
-  font-size: 14px;
-}
-
-#battleText2 {
   color: black;
   font-size: 14px;
 }
@@ -221,6 +215,7 @@ p {
 }
 
 .boardGame__sideBar {
+  max-height: 120px;
   background-image: url("../images/card_background.jpg");
   background-size: cover;
   width: 20px;
@@ -228,6 +223,7 @@ p {
 }
 
 .boardGame__gameBoardEmpty {
+  max-height: 120px;
   background-image: url("../icons/roadEmpty.png");
   background-position: center;
   background-size: cover;
@@ -238,6 +234,7 @@ p {
 }
 
 .boardGame__death {
+  max-height: 120px;
   background-image: url("../icons/trap_death.png");
   background-size: cover;
   background-position: center;
@@ -249,6 +246,7 @@ p {
 }
 
 .boardGame__trapPiece {
+  max-height: 120px;
   width: 100%;
   height: 120px;
   border: 1px solid black;
@@ -256,6 +254,7 @@ p {
 }
 
 .boardGame__trapPiece1 {
+  max-height: 120px;
   background-image: url("../icons/trap_1.png");
   background-size: cover;
   background-position: center;
@@ -267,6 +266,7 @@ p {
 }
 
 .boardGame__trapPiece2 {
+  max-height: 120px;
   background-image: url("../icons/trap_2.png");
   background-size: cover;
   background-position: center;
@@ -278,6 +278,7 @@ p {
 }
 
 .boardGame__trapPiece3 {
+  max-height: 120px;
   background-image: url("../icons/trap_3.png");
   background-size: cover;
   background-position: center;
@@ -288,6 +289,7 @@ p {
 }
 
 .boardGame__trapPiece4 {
+  max-height: 120px;
   background-image: url("../icons/trap_4.png");
   background-size: cover;
   background-position: center;
@@ -298,6 +300,7 @@ p {
 }
 
 .boardGame__boardPieceUp {
+  max-height: 120px;
   background-image: url("../icons/roadUp.png");
   background-position: center;
   background-size: cover;
@@ -309,6 +312,7 @@ p {
 }
 
 .boardGame__boardPieceDown {
+  max-height: 120px;
   background-image: url("../icons/roadDown.png");
   background-position: center;
   background-size: cover;
@@ -320,6 +324,7 @@ p {
 }
 
 .boardGame__boardPieceSide {
+  max-height: 120px;
   background-image: url("../icons/roadSide.png");
   background-position: center;
   background-size: cover;
@@ -331,6 +336,7 @@ p {
 }
 
 .boardGame__boardPieceTurn {
+  max-height: 120px;
   background-image: url("../icons/roadTurn.png");
   background-position: center;
   background-size: cover;
@@ -342,6 +348,7 @@ p {
 }
 
 .boardGame__boardPieceRight {
+  max-height: 120px;
   background-image: url("../icons/roadRight.png");
   background-position: center;
   background-size: cover;
@@ -353,6 +360,7 @@ p {
 }
 
 .boardGame__boardIcon {
+  max-height: 120px;
   background-image: url("../images/card_background.jpg");
   background-size: cover;
   max-width: 20px;
@@ -360,6 +368,7 @@ p {
 }
 
 .boardGame__startPiece {
+  max-height: 120px;
   background-image: url("../icons/roadStart.png");
   background-position: center;
   background-size: cover;
