--- a/Css/boardgame.scss
+++ b/Css/boardgame.scss
@@ -414,3 +414,25 @@ canvas{
     border-top-right-radius: 40%;
     border-bottom-right-radius: 40%;
 }
+#winner{
+    background-image: url("../images/ThroneImage.png");
+    background-size: cover;
+    background-repeat:no-repeat;
+    text-align: center !important;
+    display:grid;
+    align-content: center !important;
+    align-items: center !important;
+    justify-items: center !important;
+}
+#playerTwo{
+    max-height: 300px;
+    padding: 0px;
+}
+#playerOne{
+    max-height: 300px;
+    padding: 0px;
+}
+.win{
+    font-size: 50px;
+    color: red !important;
+}
