--- a/Css/boardgame.css
+++ b/Css/boardgame.css
@@ -450,6 +450,47 @@ p {
           transform: scale(1.1);
 }
 
+#startButtonContainer {
+  padding-bottom: 30px;
+  padding-top: 20px;
+  text-align: center;
+  display: inline-block;
+}
+
+#startButton {
+  font-family: 'Playfair Display SC', serif;
+  background-color: white;
+  color: black;
+  width: 300px;
+  padding: 15px 32px;
+  border-radius: 4px;
+  text-align: center;
+  display: inline-block;
+  font-size: 25px;
+  margin: 4px 2px;
+  cursor: default;
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+  -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#startButton:hover {
+  font-family: 'Playfair Display SC', serif;
+  background-color: darkred;
+  color: black;
+  text-align: center;
+  display: inline-block;
+  cursor: pointer;
+  margin: 4px 2px;
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+  -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
 canvas {
   border: 1px solid black;
   background-color: white;
