--- a/Css/boardgame.scss
+++ b/Css/boardgame.scss
@@ -411,6 +411,41 @@ p{
 }
 
 //-----------------------------------Winner Page-----------------------------------//
+#startButtonContainer{
+    padding-bottom: 30px;
+    padding-top: 20px;
+    text-align: center;
+    display: inline-block;
+}
+#startButton{
+    font-family: 'Playfair Display SC', serif;
+    background-color: white;
+    color: black;
+    width: 300px;
+    padding: 15px 32px;
+    border-radius: 4px;
+    text-align: center;
+    display: inline-block;
+    font-size: 25px;
+    margin: 4px 2px;
+    cursor: default;
+    transition-duration: 0.4s;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+#startButton:hover{
+    font-family: 'Playfair Display SC', serif;
+    background-color:darkred;
+    color: black;
+    text-align: center;
+    display: inline-block;
+    cursor: pointer;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    transform: scale(1.1);
+}
+
 canvas{
     border: 1px solid black;
     background-color: white;
